Optimize dependencies